[tool.poetry]
name = "blog"
version = "0.1.0"
description = "A personal blog + place to hold various projects"
authors = ["long <longnguyen176251@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-stubs = "^1.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
